# TeachAssistBackend

./: LICENSE  models.py  pyproject.toml
migrations/versions/: 1d00da0a1e39_criar_professores.py
teach_assist/: app.py  schemas.py
teach_assist/routers/: aluno.py  disciplina.py  nota.py  professor.py  turma.py
